--- a/README.org
+++ b/README.org
@@ -2,8 +2,8 @@
 
 Self-update functionality for Common Lisp executables via GitHub/GitLab Releases
 
-|---------+--------------------------------------------------|
-| source  | git:https://github.com/atgreen/cl-selfupdate.git |
-| commit  | 30134b7                                          |
-| systems | cl-selfupdate                                    |
-|---------+--------------------------------------------------|
+|---------+----------------------------------------------------------|
+| source  | git:https://github.com/atgreen/cl-selfupdate.git         |
+| commit  | 30134b7                                                  |
+| systems | cl-selfupdate cl-selfupdate/drakma cl-selfupdate/dexador |
+|---------+----------------------------------------------------------|
